--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: mitre/cti
-          path: cti
+          path: mitre-cti
 
       - uses: actions/setup-python@v2
         with:
